[project]
name = "pyspark-products"
version = "0.1.0"
description = ""
authors = [
    {name = "ruki-qq",email = "ruki@duck.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyspark (>=4.0.1,<5.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
ipytest = "^0.14.2"


[tool.poetry.group.jyp.dependencies]
jupyterlab = "^4.4.7"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
